--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Please consider reviewing the applications of:
     $scope.newuser = {};
     
     // Here is where you update your Firebase URL. 
-    var theFirebaseURL = "https://is429.firebaseio.com";
+    var theFirebaseURL = "https://amber-inferno-9477.firebaseio.com";
     
     var ref = new Firebase(theFirebaseURL);
     $scope.users = $firebase(ref.child("feedback")).$asArray(); 
