--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ The Singapore Government has launched a scheme where they will pay university st
 <hr>
 Please consider reviewing the applications of:
 <ul>
-  <li>the team presenting before us (<a href="">Team 4</a>)</li>
-  <li>the team presenting after us (<a href="">Team 6</a>)</li>
+  <li>the team presenting before us (<a href="">Team 21</a>)</li>
+  <li>the team presenting after us (<a href="http://gohyixuan92.github.io/is429-2016/">Team 1</a>)</li>
 </ul>
 
 </div>
